--- a/_includes/custom/components/_ars-hero.html
+++ b/_includes/custom/components/_ars-hero.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="small-12 columns">
 			<h2 class="ars-hero__heading">Looking for legal help with complex financial litigation?</h2>
-      <p>Advanced Research Services has over 25 years of exprience in legal finance, specializing in business valuation, litigation consulting and expert witness testimony. Contact us to get started with our experienced consultants.</p>
+      <p>Advanced Research Services has over 25 years of exprience in legal finance, specializing in business valuation, litigation consulting and expert witness testimony. Contact us to get started with our experienced consultants.</p><br />
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSfO624PD1Q1zDH2xEPxwoueEN7yYmuNAEZ7g1A9xsjKBSC5dw/viewform" class="button">Contact Us</a>
 		</div><!-- /.small-12.columns -->
 	</div><!-- /.row -->
