updates to the site

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -11,7 +11,7 @@
           <div class="large-6 columns">
             <h5>Contact Information</h5>
             <p>
-              <br />Advanced Research Services, LLC<br />111 High Street, Morgantown, WV 26505<br />Phone: 304-xxx-xxxx<br /><a href="https://docs.google.com/forms/d/e/1FAIpQLSfO624PD1Q1zDH2xEPxwoueEN7yYmuNAEZ7g1A9xsjKBSC5dw/viewform">Contact Us</a>
+              <br />Advanced Research Services, LLC<br />111 High Street, Morgantown, WV 26505<br />Phone: 304-216-1118<br /><a href="https://docs.google.com/forms/d/e/1FAIpQLSfO624PD1Q1zDH2xEPxwoueEN7yYmuNAEZ7g1A9xsjKBSC5dw/viewform">Contact Us</a>
             </p>
           </div><!-- /.large-6.columns -->
 
